--- a/MyProject/MyProject.vcxproj
+++ b/MyProject/MyProject.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClInclude Include="include\romanNumeral.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
